update ctf